--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<h1>
-  hello
-</h1>
-<h1>kiha</h1>
+<html>
+  <head>
+    <title>
+      Home-Decor
+    </title>
+  </head>
+</html>
