--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      Home-Decor
-    </title>
-  </head>
-  <body>
-    <h1>
-      hello
-    </h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Home-Decore </title>
+</head>
+<body>
+  <header>
+    
+  </header>
+    
+</body>
 </html>
