--- a/product.html
+++ b/product.html
@@ -19,12 +19,15 @@
             <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\product.html" > Product </a></li>
             <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\giftcard.html" > Gift cards </a></li>
             <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\suggetion.html" > Suggetion </a></li>
-            
+            <div class="container">
+              <i class="fa-solid fa-cart-shopping"></i>
+          </div>
           </ul>
         </nav>
       
     </div>
 
+    <h1> product </h1>
   </div> 
 </body>
 </html>
