--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
+  <div class="extra"></div>
   <div class="himage">
-
+      <img src="C:\Users\Admin\Documents\GitHub\Home-Decor\images\img_4.jpg">
   </div>
    <div class="bproduct">
+    
      
    </div>
 <h1> index </h1>
