--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-   
-   
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
@@ -18,15 +14,15 @@
       <img src="images/img_1.jpg" width="125px">
     </div>
     <ul class="nav-list">
-      <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\home.html"  > Home </a></li>
-      <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\product.html" > Product </a></li>
-      <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\giftcard.html" > Gift cards </a></li>
-      <li> <a href="C:\Users\Admin\Documents\GitHub\Home-Decor\suggetion.html" > Suggetion </a></li>      
+      <li> <a href="home.html"  > Home </a></li>
+      <li> <a href="product.html" > Product </a></li>
+      <li> <a href="giftcard.html" > Gift cards </a></li>
+      <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
   <div class="extra"></div>
   <div class="himage">
-      <img src="C:\Users\Admin\Documents\GitHub\Home-Decor\images\img_4.jpg">
+      <img src="">
   </div>
    <div class="bproduct">
     
