--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Responsive Navbar Example</title>
-
 </head>
 <body>
-
-  <nav class="navbar">
+    <nav class="navbar">
     <div class="logo">
       <img src="images/img_1.jpg" width="125px">
     </div>
@@ -22,7 +20,7 @@
   </nav>
   <div class="extra"></div>
   <div class="himage">
-      <img src="">
+      <img src="C:\Users\Admin\Documents\GitHub\Home-Decor\Home-Decor\images\home_img.jpg">
   </div>
    <div class="bproduct">
     
