--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
     <div class="logo">
-      <img src="images/img_1.jpg" width="125px">
+      <img src="images/img_1.jpg" width="100px">
     </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
@@ -18,13 +18,21 @@
       <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
-  <div class="extra"></div>
-  <div class="himage">
-      <img src="C:\Users\Admin\Documents\GitHub\Home-Decor\Home-Decor\images\home_img.jpg">
+  <div class="extra">
+    <div class="extra">
+
+    </div>
   </div>
-   <div class="bproduct">
-    
-     
+  <div class="homeimg">
+    <div class="himage">
+      <img src="images/home_img.jpg" width="750px" height="450px">
+  </div>
+  <div class="info">
+    <p>“Be faithful to your own taste, because nothing you really like is ever out of style.”</p>
+  </div>
+  </div>
+  
+   <div class="bproduct">  
    </div>
 <h1></h1>
 
