--- a/product.html
+++ b/product.html
@@ -25,7 +25,20 @@
     </ul>
   </nav>
   <div class="extra"></div>
-  
+  <div class="gallery">
+    <img src="images/cimg_1.jpg" alt="Image 1">
+    <p> clock 1</p>
+    <img src="images/cimg_2.jpg" alt="Image 2">
+    <p> clock 2</p>
+    <img src="images/cimg_3.jpg" alt="Image 3">
+    <p> clock 3</p>
+    <img src="images/cimg_4.jpg" alt="Image 3">
+    <p> clock 4</p>
+    <img src="images/cimg_5.jpg" alt="Image 3">
+    <p> clock 5</p>
+    <img src="images/cimg_6.jpg" alt="Image 3">
+    <p> clock 6</p>
+    </div>
 <h1> product </h1>
 
 </body>
