--- a/home.html
+++ b/home.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Responsive Navbar Example</title>
-
 </head>
 <body>
-
-  <nav class="navbar">
+    <nav class="navbar">
     <div class="logo">
-      <img src="images/img_1.jpg" width="125px">
+      <img src="images/img_1.jpg" width="100px">
     </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
@@ -20,9 +18,21 @@
       <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
-  <div class="extra"></div>
+  <div class="extra">
+    <div class="extra">
+    </div>
+  </div>
+  <div class="homeimg">
+    <div class="himage">
+      <img src="images/home_img.jpg" width="750px" height="450px">
+  </div>
+  <div class="info">
+    <p>“Be faithful to your own taste, because nothing you really like is ever out of style.”</p>
+  </div>
+  </div>
   
-<h1> Home </h1>
+
+<h1></h1>
 
 </body>
 </html>
