--- a/product.html
+++ b/product.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-   
-   
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Responsive Navbar Example</title>
-
+  <title>Home-Decor</title>
 </head>
 <body>
-
   <nav class="navbar">
     <div class="logo">
       <img src="images/img_1.jpg" width="125px">
@@ -26,17 +20,17 @@
   </nav>
   <div class="extra"></div>
   <div class="gallery">
-    <img src="images/cimg_1.jpg" alt="Image 1">
+    <img src="images/cimg_1.jpg" >
     <p> clock 1</p>
-    <img src="images/cimg_2.jpg" alt="Image 2">
+    <img src="images/cimg_2.jpg" >
     <p> clock 2</p>
-    <img src="images/cimg_3.jpg" alt="Image 3">
+    <img src="images/cimg_3.jpg" >
     <p> clock 3</p>
-    <img src="images/cimg_4.jpg" alt="Image 3">
+    <img src="images/cimg_4.jpg" >
     <p> clock 4</p>
-    <img src="images/cimg_5.jpg" alt="Image 3">
+    <img src="images/cimg_5.jpg" >
     <p> clock 5</p>
-    <img src="images/cimg_6.jpg" alt="Image 3">
+    <img src="images/cimg_6.jpg" >
     <p> clock 6</p>
     </div>
 <h1> product </h1>
