--- a/product.html
+++ b/product.html
@@ -19,20 +19,29 @@
     </ul>
   </nav>
   <div class="extra"></div>
-  <div class="gallery">
-    <img src="images/cimg_1.jpg" >
-    <p> clock 1</p>
-    <img src="images/cimg_2.jpg" >
-    <p> clock 2</p>
-    <img src="images/cimg_3.jpg" >
-    <p> clock 3</p>
-    <img src="images/cimg_4.jpg" >
-    <p> clock 4</p>
-    <img src="images/cimg_5.jpg" >
-    <p> clock 5</p>
-    <img src="images/cimg_6.jpg" >
-    <p> clock 6</p>
+  <div class="image-grid">
+    <!-- Individual items -->
+    <div class="image-item">
+        <img src="images/cimg_1.jpg" alt="Product 1">
     </div>
+    <div class="image-item">
+        <img src="images/cimg_2.jpg" alt="Product 2">
+    </div>
+    <div class="image-item">
+        <img src="images/cimg_3.jpg" alt="Product 3">
+    </div>
+    <div class="image-item">
+      <img src="images/cimg_4.jpg" alt="Product 3">
+  </div>
+  <div class="image-item">
+    <img src="images/cimg_5.jpg" alt="Product 3">
+</div>
+<div class="image-item">
+  <img src="images/cimg_6.jpg" alt="Product 3">
+</div>
+
+    
+</div>
 <h1> product </h1>
 
 </body>
