--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Responsive Navbar Example</title>
 </head>
 <body>
+  <div class=" header">
     <nav class="navbar">
     <div class="logo">
       <img src="images/img_1.jpg" width="100px">
@@ -18,6 +19,7 @@
       <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
+  </div>
   <div class="extra">
     <div class="extra">
     </div>
