--- a/giftcard.html
+++ b/giftcard.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-   
-   
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Home-Decor</title>
-
 </head>
 <body>
-
-  <nav class="navbar">
+  <div class=" header">
+    <nav class="navbar">
     <div class="logo">
-      <img src="images/img_1.jpg" width="125px">
+      <img src="images/img_1.jpg" width="100px">
     </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
@@ -24,6 +19,7 @@
       <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
+  </div>
   <div class="extra"></div>
   
 <h1> gift cards </h1>
