--- a/product.html
+++ b/product.html
@@ -7,9 +7,10 @@
   <title>Home-Decor</title>
 </head>
 <body>
-  <nav class="navbar">
+  <div class=" header">
+    <nav class="navbar">
     <div class="logo">
-      <img src="images/img_1.jpg" width="125px">
+      <img src="images/img_1.jpg" width="100px">
     </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
@@ -18,6 +19,7 @@
       <li> <a href="suggetion.html" > Suggetion </a></li>      
     </ul>
   </nav>
+  </div>
   <div class="extra"></div>
   <div class="image-grid">
     <!-- Individual items -->
