--- a/index.html
+++ b/index.html
@@ -32,10 +32,22 @@
     <p>“Be faithful to your own taste, because nothing you really like is ever out of style.”</p>
   </div>
   </div>
-  
-   <div class="bproduct">  
-   </div>
-<h1></h1>
+  <div class="categories">
+    <h1><center> best products </center></h1>
+    <div class="row">
+      <div class="small-container">
+        <div class="col-3">
+          <img src="images/ming_1.jpg">
+        </div>
+        <div class="col-3">
+          <img src="images/vimg_1.jpg">
+        </div> 
+        <div class="col-3">
+          <img src="images/cimg_1.jpg">
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
