--- a/home.html
+++ b/home.html
@@ -10,7 +10,9 @@
   <div class=" header">
     <nav class="navbar">
     <div class="logo">
-      <img src="images/img_1.jpg" width="100px">
+      <a href="index.html">
+        <img src="images/img_1.jpg" width="100px">
+    </a>
     </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
@@ -32,9 +34,18 @@
     <p>“Be faithful to your own taste, because nothing you really like is ever out of style.”</p>
   </div>
   </div>
-  
-
-<h1></h1>
-
+  <h1> <center> BEST PRODUCTS </center></h1>
+  <div class="image-grid">
+    <!-- Individual items -->
+    <div class="image-item">
+        <img src="images/cimg_1.jpg" alt="Product 1">
+    </div>
+    <div class="image-item">
+        <img src="images/vimg_1.jpg" alt="Product 2">
+    </div>
+    <div class="image-item">
+        <img src="images/mimg_10.jpg" alt="Product 3">
+    </div>
+</div>
 </body>
 </html>
