--- a/1.html
+++ b/1.html
@@ -41,19 +41,45 @@
     </style>
 </head>
 <body>
-    <!-- Container for the grid -->
-    <div class="image-grid">
-        <!-- Individual items -->
-        <div class="image-item">
-            <img src="images/cimg_1.jpg" alt="Product 1">
+    <div class="img_main">
+        <div class="img_heading">
+            <div class="headinggg">
+                <center><h1><b>How It Works?</b></h1></center>
+            </div>
         </div>
-        <div class="image-item">
-            <img src="images/cimg_2.jpg" alt="Product 2">
+        <div class="img_container">
+            <div class="img_2nd_con">
+
+                <div class="image">
+                    <div class="img">
+                        <img src="images/cimg_1.jpg">
+                        <p><b>Traders and investors</b></p>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="img">
+                        <img src="images/img_2">
+                        <p><b>Exchanges</b></p>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="img">
+                        <img src="images/mimg_8.jpg">
+                        <p><b>miners</b></p>
+                    </div>
+                </div>
+                <div class="image">
+                    <div class="img">
+                        <img src="images/vimg_6.jpg">
+                        <p><b>payment</b></p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="image-item">
-            <img src="images/cimg_3.jpg" alt="Product 3">
-        </div>
-        <!-- Add more items as needed -->
+    </div>
+    </div>
+    </div>
+        
     </div>
 </body>
 </html>
