--- a/giftcard.html
+++ b/giftcard.html
@@ -9,9 +9,11 @@
 <body>
   <div class=" header">
     <nav class="navbar">
-    <div class="logo">
-      <img src="images/img_1.jpg" width="100px">
-    </div>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/img_1.jpg" width="100px">
+      </a>
+      </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
       <li> <a href="product.html" > Product </a></li>
