--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <title>Responsive Navbar Example</title>
 </head>
 <body>
   <div class=" header">
     <nav class="navbar">
-    <div class="logo">
-      <img src="images/img_1.jpg" width="100px">
-    </div>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/img_1.jpg" width="100px">
+      </a>
+      </div>
     <ul class="nav-list">
       <li> <a href="home.html"  > Home </a></li>
       <li> <a href="product.html" > Product </a></li>
@@ -26,28 +31,45 @@
   </div>
   <div class="homeimg">
     <div class="himage">
-      <img src="images/home_img.jpg" width="750px" height="450px">
+      <img src="images/home_img.jpg" width="1280px" height="500px">
   </div>
   <div class="info">
     <p>“Be faithful to your own taste, because nothing you really like is ever out of style.”</p>
   </div>
   </div>
-  <div class="categories">
-    <h1><center> best products </center></h1>
-    <div class="row">
-      <div class="small-container">
-        <div class="col-3">
-          <img src="images/ming_1.jpg">
+  <div class="img_main">
+    <div class="img_heading">
+        <div class="headinggg">
+            <center><h1><b>BEST PRODUCTS</b></h1></center>
         </div>
-        <div class="col-3">
-          <img src="images/vimg_1.jpg">
-        </div> 
-        <div class="col-3">
-          <img src="images/cimg_1.jpg">
-        </div>
-      </div>
     </div>
-  </div>
+    <div class="img_container">
+        <div class="img_2nd_con">
 
+            <div class="image">
+                <div class="img">
+                    <img src="images/cimg_1.jpg">
+                    <p><b>CLOCKS</b></p>
+                </div>
+            </div>
+            <div class="image">
+                <div class="img">
+                    <img src="images/mimg_2.jpg">
+                    <p><b>MIRRORS</b></p>
+                </div>
+            </div>
+            <div class="image">
+                <div class="img">
+                    <img src="images/vimg_1.jpg">
+                    <p><b>VASES</b></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+    
+</div>
 </body>
 </html>
