--- a/index.html
+++ b/index.html
@@ -69,7 +69,39 @@
 </div>
 </div>
 </div>
-    
+<div class="upcomming">
+  <div class="img_main">
+    <div class="img_heading">
+        <div class="headinggg">
+            <center><h1><b>BEST PRODUCTS</b></h1></center>
+        </div>
+    </div>
+    <div class="img_container">
+        <div class="img_2nd_con">
+
+            <div class="image">
+                <div class="img">
+                    <img src="images/cimg_1.jpg">
+                    <p><b>CLOCKS</b></p>
+                </div>
+            </div>
+            <div class="image">
+                <div class="img">
+                    <img src="images/mimg_2.jpg">
+                    <p><b>MIRRORS</b></p>
+                </div>
+            </div>
+            <div class="image">
+                <div class="img">
+                    <img src="images/vimg_1.jpg">
+                    <p><b>VASES</b></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
