--- a/product.html
+++ b/product.html
@@ -26,27 +26,24 @@
   <div class="image-grid">
     <!-- Individual items -->
     <div class="image-item">
-        <img src="images/cimg_1.jpg" alt="Product 1">
+        <img src="images/cimg_1.jpg">
     </div>
     <div class="image-item">
-        <img src="images/cimg_2.jpg" alt="Product 2">
+        <img src="images/cimg_2.jpg">
     </div>
     <div class="image-item">
-        <img src="images/cimg_3.jpg" alt="Product 3">
+        <img src="images/cimg_3.jpg">
     </div>
     <div class="image-item">
-      <img src="images/cimg_4.jpg" alt="Product 3">
+      <img src="images/cimg_4.jpg">
   </div>
   <div class="image-item">
-    <img src="images/cimg_5.jpg" alt="Product 3">
+    <img src="images/cimg_5.jpg">
 </div>
 <div class="image-item">
-  <img src="images/cimg_6.jpg" alt="Product 3">
-</div>
-
-    
+  <img src="images/cimg_6.jpg">
+</div>  
 </div>
 <h1> product </h1>
-
 </body>
 </html>
