--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="image">
                 <div class="img">
-                    <img src="images/mimg_2.jpg">
+                    <img src="images/mimg_7.jpg">
                     <p><b>MIRRORS</b></p>
                 </div>
             </div>
@@ -70,10 +70,9 @@
 </div>
 </div>
 <div class="upcomming">
-  <div class="img_main">
     <div class="img_heading">
         <div class="headinggg">
-            <center><h1><b>BEST PRODUCTS</b></h1></center>
+            <center><h1><b> UPCOMMING PRODUCTS </b></h1></center>
         </div>
     </div>
     <div class="img_container">
@@ -81,25 +80,24 @@
 
             <div class="image">
                 <div class="img">
-                    <img src="images/cimg_1.jpg">
+                    <img src="images/oimg_1.webp">
                     <p><b>CLOCKS</b></p>
                 </div>
             </div>
             <div class="image">
                 <div class="img">
-                    <img src="images/mimg_2.jpg">
+                    <img src="images/oimg_2.webp">
                     <p><b>MIRRORS</b></p>
                 </div>
             </div>
             <div class="image">
                 <div class="img">
-                    <img src="images/vimg_1.jpg">
+                    <img src="images/oimg_3.webp">
                     <p><b>VASES</b></p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </div>
 </div>
