--- a/1.html
+++ b/1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -81,5 +81,53 @@
     </div>
         
     </div>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home Decor Website</title>
+  <link rel="stylesheet" href="1.css">
+</head>
+<body>
+  <header>
+    <h1>Welcome to Our Home Decor Store</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Furniture</a></li>
+        <li><a href="#">Decor</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="featured-items">
+      <h2>Featured Items</h2>
+      <div class="item">
+        <img src="images/home1_img.jpeg" alt="Item 1">
+        <p>Item 1 Description</p>
+      </div>
+      <div class="item">
+        <img src="images/vimg_1.jpg" alt="Item 2">
+        <p>Item 2 Description</p>
+      </div>
+      <!-- Add more items as needed -->
+    </section>
+
+    <section class="popular-categories">
+      <h2>Popular Categories</h2>
+      <!-- Categories and items go here -->
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Home Decor Store</p>
+  </footer>
 </body>
 </html>
