--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <title>Responsive Navbar Example</title>
 </head>
 <body>
@@ -43,6 +40,41 @@
             <center><h1><b>BEST PRODUCTS</b></h1></center>
         </div>
     </div>
+    <ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul>
+      <ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul>
+      <ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul><ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul>
+      <ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul>
+      <ul class="nav-list">
+        <li> <a href="home.html"  > Home </a></li>
+        <li> <a href="product.html" > Product </a></li>
+        <li> <a href="giftcard.html" > Gift cards </a></li>
+        <li> <a href="suggetion.html" > Suggetion </a></li>      
+      </ul>
     <div class="img_container">
         <div class="img_2nd_con">
 
